--- a/webapp/src/main/webapp/WEB-INF/classes/confirmEmail.html
+++ b/webapp/src/main/webapp/WEB-INF/classes/confirmEmail.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Confirmation Email</title>
+    <title th:text="#{mail.confirmation.title}"></title>
 </head>
 <body>
 
