--- a/webapp/src/main/webapp/WEB-INF/classes/passwordResetEmail.html
+++ b/webapp/src/main/webapp/WEB-INF/classes/passwordResetEmail.html
@@ -7,7 +7,9 @@
 <body>
 
 <h1 th:text="#{mail.passwordReset.header}"></h1>
-<a th:text="#{mail.passwordReset.link}" th:href="@{${confirmationURL}}"></a>
+
+<!--/*@thymesVar id="token" type="java.lang.String"*/-->
+<a th:text="#{mail.passwordReset.link}" th:href="@{__${applicationBasePath}__/user/updatePassword/token(token=${token})}"></a>
 
 </body>
 </html>
