Reset Password and Confirm Email Flows Implemented

--- a/webapp/src/main/webapp/WEB-INF/classes/confirmEmail.html
+++ b/webapp/src/main/webapp/WEB-INF/classes/confirmEmail.html
@@ -34,6 +34,7 @@
                             </tr>
                             <tr>
                                 <td style="padding: 20px 0 30px 0; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+<!--                                    TODO: Just show code  -->
                                     <a style="text-align: end; color: #222831"
                                        th:href="@{__${applicationBasePath}__/user/registrationConfirm(token=${token})}"
                                        th:text="#{mail.confirmation.confirmLink}"></a>
