--- a/webapp/src/main/webapp/WEB-INF/classes/passwordResetEmail.html
+++ b/webapp/src/main/webapp/WEB-INF/classes/passwordResetEmail.html
@@ -36,6 +36,7 @@
                             </tr>
                             <tr>
                                 <td style="padding: 20px 0 30px 0; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+<!--                                    TODO: Just Show Code  -->
                                     <a style="text-align: end; color: #222831"
                                        th:href="@{__${applicationBasePath}__/user/updatePassword/token(token=${token})}"
                                        th:text="#{mail.passwordReset.linkMessage}"></a>
