--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -33,23 +33,23 @@
             </form>
           </div>
         </li>
-        <li class="uk-navbar-item ng-cloak" ng-show="!loggedUser">
-          <a ng-href="/login">LOGIN</a>
+        <li class="uk-navbar-item ng-cloak" ng-show="!loggedUser.logged">
+          <a href="/login">LOGIN</a>
         </li>
         <li>
-          <a class="uk-text-center ng-cloak" ng-href="/user/create" ng-show="!loggedUser">
+          <a class="uk-text-center ng-cloak" ng-href="/user/create" ng-show="!loggedUser.logged">
           <button class="uk-button uk-button-primary uk-border-rounded uk-text-bolder uk-text-secondary" type="button">SIGNUP</button>
           </a>
         </li>
 
-        <li class="uk-navbar-item ng-cloak" ng-show="loggedUser">
+        <li class="uk-navbar-item ng-cloak" ng-show="loggedUser.logged">
             <!-- This is a button toggling the modal -->
-            <a ng-show="!loggedUser.validated" class="uk-padding-remove" href="#" uk-toggle="target: #confirm-email-modal">
+            <a ng-show="!loggedUser.enabled" class="uk-padding-remove" href="#" uk-toggle="target: #confirm-email-modal">
               CREATE POST
             </a>
-            <a ng-show="loggedUser.validated" class="uk-padding-remove" ng-href="/post/create">CREATE POST</a>
+            <a ng-show="loggedUser.enabled" class="uk-padding-remove" ng-href="/post/create">CREATE POST</a>
         </li>
-        <li ng-show="loggedUser" class="ng-cloak">
+        <li ng-show="loggedUser.logged" class="ng-cloak">
           <a class="nav-user uk-padding-remove uk-margin-right uk-margin-small-left" ng-href="/user/profile">
             <span class="iconify" data-icon="teenyicons:user-circle-outline" data-inline="false"></span>
             <img src="/user/avatar/{{loggedUser.avatarId}}" class="uk-comment-avatar circle-navbar" width="45" height="45" alt="User Avatar">
@@ -85,7 +85,7 @@
   <div ng-view=""></div>
 
   <!-- Confirm email modal -->
-  <div ng-show="loggedUser && !loggedUser.validated" id="confirm-email-modal" uk-modal>
+  <div ng-show="loggedUser && !loggedUser.enabled" id="confirm-email-modal" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
       <h2 class="uk-modal-title">MODAL TITLE</h2>
       <p>EMAIL CONFIRM TEXT MODAL</p>
