--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" class="no-js" >
+<html lang="en" class="no-js" ng-controller="IndexCtrl">
 <head>
   <meta charset="utf-8">
-  <title>frontend</title>
+  <title>{{title.value}}</title>
   <base href="/">
   <meta name="description" content="">
   <!-- build:css(.tmp) styles/main.css -->
@@ -11,7 +11,7 @@
   <!-- endbuild -->
 
 </head>
-<body class="uk-padding-remove" ng-controller="IndexCtrl">
+<body class="uk-padding-remove">
   <!--[if lt IE 7]>
   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
