--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -5,6 +5,9 @@
   <title>{{title.value}}</title>
   <base href="/">
   <meta name="description" content="">
+
+  <link rel = "icon" href = "images/favicon.png" type = "image/x-icon" />
+
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/extraStyle.css">
