--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -72,7 +72,7 @@
                   </a>
                 </li>
               <li>
-                <a class="uk-text-normal uk-text-center m-text-red" ng-href="/logout">
+                <a class="uk-text-normal uk-text-center m-text-red" ng-click="logout()">
                 LOGOUT
                 </a>
               </li>
