Little changes to FilteredPostCollectionController.js

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -29,7 +29,7 @@
               <span uk-icon="icon: search; ratio: 1.7"></span>
             </a>
             <div class="uk-drop" data-uk-drop="mode: click; pos: left-center; offset: 0; boundary: #navbar">
-              <form action="/search/posts" class="uk-search uk-search-navbar uk-width-1-1">
+              <form action="/search" class="uk-search uk-search-navbar uk-width-1-1">
                 <label for="nav-search"></label>
                 <input autofocus id="nav-search" name="query" class="uk-search-input" type="search" placeholder="{{'SEARCH_TITLE' | translate}}..." >
                 <button id="submit-navbar-search-button" class="uk-button uk-button-default uk-border-rounded search-button uk-text-uppercase" type="submit">{{'SEARCH_TITLE' | translate}}</button>
