--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -6,10 +6,10 @@
   <base href="/">
   <meta name="description" content="">
 
-  <link rel = "icon" href = "app/resources/imagessources/images/favicon.png" type = "image/x-icon" />
+  <link rel = "icon" href = "resources/images/favicon.png" type = "image/x-icon" />
 
   <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="app/resources/styles/main.css">
+  <link rel="stylesheet" href="resources/styles/main.css">
   <!-- endbuild -->
 
 </head>
@@ -21,7 +21,7 @@
 
   <header id="navbar" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
     <nav class="uk-navbar-container" uk-navbar>
-      <a class="uk-logo" href="/"><img id="nav-logo" src="app/resources/imagessources/images/logo.png" alt="Moovify"></a>
+      <a class="uk-logo" href="/"><img id="nav-logo" src="resources/images/logo.png" alt="Moovify"></a>
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
           <li class="uk-visible@s uk-flex uk-flex-middle">
@@ -100,12 +100,12 @@
 
  <!-- build:js(.) scripts/oldieshim.js -->
   <!--[if lt IE 9]>
-  <script src="bower_components/es5-shim/es5-shim.js"></script>
-  <script src="bower_components/json3/lib/json3.js"></script>
+  <script src="resources/bower_components/es5-shim/es5-shim.js"></script>
+  <script src="resources/bower_components/json3/lib/json3.js"></script>
   <![endif]-->
   <!-- endbuild -->
-  <script src="resources/scripts/paths.js"></script> resources/scripts/paths
-  <script src="/resources/bower_components/requirejs/require.js" data-main="/scripts/build.js"></script>
+  <script src="resources/scripts/paths.js"></script>
+  <script src="resources/bower_components/requirejs/require.js" data-main="resources/scripts/build.js"></script>
 
 </body>
 </html>
