--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -6,19 +6,14 @@
   <base href="/">
   <meta name="description" content="">
 
-  <link rel = "icon" href = "resources/images/favicon.png" type = "image/x-icon" />
-
-  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="resources/styles/main.css">
-  <!-- endbuild -->
+
 
 </head>
 <body class="uk-padding-remove">
-  <!--[if lt IE 7]>
-  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-  <!-- Add your site or application content here -->
 
+  <!-- Add your site or application content here -->
   <header id="navbar" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
     <nav class="uk-navbar-container" uk-navbar>
       <a class="uk-logo" href="/"><img id="nav-logo" src="resources/images/logo.png" alt="Moovify"></a>
@@ -98,12 +93,6 @@
     </div>
   </div>
 
- <!-- build:js(.) scripts/oldieshim.js -->
-  <!--[if lt IE 9]>
-  <script src="resources/bower_components/es5-shim/es5-shim.js"></script>
-  <script src="resources/bower_components/json3/lib/json3.js"></script>
-  <![endif]-->
-  <!-- endbuild -->
   <script src="resources/scripts/paths.js"></script>
   <script src="resources/bower_components/requirejs/require.js" data-main="resources/scripts/build.js"></script>
 
