--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -11,7 +11,7 @@
 
 
 </head>
-<body class="uk-padding-remove">
+<body class="uk-padding-remove" ng-show="!waitLogin">
 
   <!-- Add your site or application content here -->
   <header id="navbar" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
