--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -14,10 +14,10 @@
 <body class="uk-padding-remove">
 
   <!-- Add your site or application content here -->
-  <header id="navbar" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar" ng-if="!waitLogin">
+  <header id="navbar" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
     <nav class="uk-navbar-container" uk-navbar>
       <a class="uk-logo" href="/"><img id="nav-logo" src="resources/images/logo.png" alt="Moovify"></a>
-      <div class="uk-navbar-right">
+      <div ng-if="!waitLogin" class="uk-navbar-right">
         <ul class="uk-navbar-nav">
           <li class="uk-visible@s uk-flex uk-flex-middle">
             <a id="nav-search-toggle" class="uk-navbar-toggle" title="{{'SEARCH_TITLE' | translate}}">
