Admin panel, added CommentSearchDirective, changed homescreen a bit and some displays

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -62,7 +62,7 @@
                   </a>
                 </li>
                 <li ng-if="loggedUser.roles.includes('ADMIN')">
-                  <a class="uk-text-normal uk-text-center m-text-primary" ng-href="/admin/deleted/posts">
+                  <a class="uk-text-normal uk-text-center m-text-primary" ng-href="/admin">
                     {{'ADMIN_PANEL_BTN' | translate}}
                   </a>
                 </li>
