send email to reset password

--- a/webapp/src/main/webapp/WEB-INF/classes/passwordResetEmail.html
+++ b/webapp/src/main/webapp/WEB-INF/classes/passwordResetEmail.html
@@ -41,6 +41,7 @@
                                        th:href="@{__${applicationBasePath}__/user/updatePassword/token(token=${token})}"
                                        th:text="#{mail.passwordReset.linkMessage}"></a>
                                 </td>
+                                <p th:text="${token}"></p>
                             </tr>
                         </table>
                     </td>
