--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -20,16 +20,20 @@
       <div ng-if="!waitLogin" class="uk-navbar-right">
         <ul class="uk-navbar-nav">
           <li class="uk-visible@s uk-flex uk-flex-middle">
+
             <a id="nav-search-toggle" class="uk-navbar-toggle" title="{{'SEARCH_TITLE' | translate}}">
               <span uk-icon="icon: search; ratio: 1.7"></span>
             </a>
-            <div class="uk-drop" data-uk-drop="mode: click; pos: left-center; offset: 0; boundary: #navbar">
-              <form action="/search" class="uk-search uk-search-navbar uk-width-1-1">
+            <div class="uk-drop" id="navbar-search-drop" data-uk-drop="mode: click; pos: left-center; offset: 0; boundary: #navbar">
+              <form class="uk-search uk-search-navbar uk-width-1-1" >
                 <label for="nav-search"></label>
-                <input autofocus id="nav-search" name="query" class="uk-search-input" type="search" placeholder="{{'SEARCH_PLACEHOLDER' | translate}}" >
-                <button id="submit-navbar-search-button" class="uk-button uk-button-default uk-border-rounded search-button uk-text-uppercase" type="submit">{{'SEARCH_TITLE' | translate}}</button>
+                <input autofocus id="nav-search" name="searchQuery" ng-model="search.query" class="uk-search-input"
+                       ng-keydown="$event.keyCode === 13 && execSearch()" type="search" placeholder="{{'SEARCH_PLACEHOLDER' | translate}}" >
+                <a id="submit-navbar-search-button" ng-click="execSearch()"
+                   class="uk-button uk-button-default uk-border-rounded search-button uk-text-uppercase" >{{'SEARCH_TITLE' | translate}}</a>
               </form>
             </div>
+
           </li>
           <li class="uk-navbar-item uk-text-uppercase ng-cloak" ng-if="!loggedUser.logged">
             <a href="/login">{{'USER_LOGIN_ALT' | translate}}</a>
