--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -90,9 +90,11 @@
     <div class="uk-modal-dialog uk-modal-body">
       <h2 class="uk-modal-title">{{'USER_EMAILCONFIRM_TITLE' | translate}}</h2>
       <p>{{'USER_EMAILCONFIRM_TEXT' | translate}}</p>
+      <div class="uk-text-center uk-text-danger" ng-if="resendError">{{'MAIL_FEEDBACK_ERROR' | translate}}</div>
+      <div class="uk-text-center uk-text-success" ng-if="resendSuccess">{{'MAIL_FEEDBACK_SUCCESS' | translate}}</div>
       <p class="uk-text-right">
-        <a class="uk-button uk-button-secondary uk-border-rounded uk-text-bolder uk-text-uppercase" ng-href="/user/resendConfirmation">{{'USER_PROFILE_RESENDEMAIL' | translate}}</a>
-        <button class="uk-button uk-button-primary uk-border-rounded uk-text-bolder uk-modal-close uk-text-uppercase" type="button">{{'USER_EMAILCONFIRM_CLOSEMODAL' | translate}}</button>
+        <a class="uk-button uk-button-secondary uk-border-rounded uk-text-bolder uk-text-uppercase" ng-click="resendEmail()">{{'USER_PROFILE_RESENDEMAIL' | translate}}</a>
+        <button class="uk-button uk-button-primary uk-border-rounded uk-text-bolder uk-modal-close uk-text-uppercase" type="button" ng-click="gotIt()">{{'USER_EMAILCONFIRM_CLOSEMODAL' | translate}}</button>
       </p>
     </div>
   </div>
