--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -16,7 +16,7 @@
   <!-- Add your site or application content here -->
   <header id="navbar" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
     <nav class="uk-navbar-container" uk-navbar>
-      <a class="uk-logo" href="/"><img id="nav-logo" src="resources/images/logo.png" alt="Moovify"></a>
+      <a class="uk-logo" href="./"><img id="nav-logo" src="resources/images/logo.png" alt="Moovify"></a>
       <div ng-if="!waitLogin" class="uk-navbar-right">
         <ul class="uk-navbar-nav">
           <li class="uk-visible@s uk-flex uk-flex-middle">
@@ -36,10 +36,10 @@
 
           </li>
           <li class="uk-navbar-item uk-text-uppercase ng-cloak" ng-if="!loggedUser.logged">
-            <a href="/login">{{'USER_LOGIN_ALT' | translate}}</a>
+            <a href="login">{{'USER_LOGIN_ALT' | translate}}</a>
           </li>
           <li>
-            <a class="uk-text-center ng-cloak" ng-href="/signup" ng-if="!loggedUser.logged">
+            <a class="uk-text-center ng-cloak" ng-href="signup" ng-if="!loggedUser.logged">
               <button class="uk-button uk-button-primary uk-border-rounded uk-text-bolder uk-text-uppercase uk-text-secondary" type="button">{{'USER_CREATE_SIGNUP_ALT' | translate}}</button>
             </a>
           </li>
@@ -49,10 +49,10 @@
             <a ng-if="hasRole(loggedUser, 'NOT_VALIDATED')" class="uk-padding-remove uk-text-uppercase" href="#" uk-toggle="target: #confirm-email-modal">
               {{'NAVBAR_CREATE_POST' | translate}}
             </a>
-            <a ng-if="!hasRole(loggedUser, 'NOT_VALIDATED')" class="uk-padding-remove uk-text-uppercase" ng-href="/post/create">{{'NAVBAR_CREATE_POST' | translate}}</a>
+            <a ng-if="!hasRole(loggedUser, 'NOT_VALIDATED')" class="uk-padding-remove uk-text-uppercase" ng-href="post/create">{{'NAVBAR_CREATE_POST' | translate}}</a>
           </li>
           <li ng-if="loggedUser.logged" class="ng-cloak">
-            <a class="nav-user uk-padding-remove uk-margin-right uk-margin-small-left" ng-href="/user">
+            <a class="nav-user uk-padding-remove uk-margin-right uk-margin-small-left" ng-href="user">
 
               <img ng-src="{{loggedUser.avatar}}" class="uk-comment-avatar circle-navbar" width="45" height="45" alt="User Avatar">
               <span class="uk-text-bold uk-margin-small-left uk-text-uppercase">{{loggedUser.username}}</span>
@@ -61,12 +61,12 @@
             <div class="uk-navbar-dropdown m-bg-primary-lighter-5 m-rounded-bottom-10">
               <ul class="uk-nav uk-navbar-dropdown-nav">
                 <li>
-                  <a class="uk-text-normal uk-text-center m-text-primary" ng-href="/user">
+                  <a class="uk-text-normal uk-text-center m-text-primary" ng-href="user">
                     {{'USER_PROFILE' | translate}}
                   </a>
                 </li>
                 <li ng-if="hasRole(loggedUser, 'ADMIN')">
-                  <a class="uk-text-normal uk-text-center m-text-primary" ng-href="/admin">
+                  <a class="uk-text-normal uk-text-center m-text-primary" ng-href="admin">
                     {{'ADMIN_PANEL_BTN' | translate}}
                   </a>
                 </li>
